--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
     background-color: #151515;
     border-bottom: solid white;
     position: relative;
-
+   
 
 }
 .headerDiv{
@@ -97,4 +97,104 @@ h1{
 .vector{
     position: absolute;
     top: 174px;
+}
+.imspan{
+    position: absolute;
+    top: 190px;
+    width: 820px;
+    height: 88px;   
+    font-family: 'Space Grotesk';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 88px;
+    line-height: 88px;
+    color: white;
+    letter-spacing: 0.4px; 
+}
+.lashaspan{
+    position: absolute;
+    top: 190px;
+    left: 150px;
+    width: 645px;
+    height: 100px;   
+    font-family: 'Space Grotesk';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 88px;
+    line-height: 88px;
+    color: white;
+    letter-spacing: 0.4px; 
+    border-bottom: solid #4EE1A0 5px;
+   
+    
+    
+}
+.textP{
+    width: 445px;
+    height: 84px;
+    position: absolute;
+    height: 84px;
+    font-family: 'Space Grotesk';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 28px;
+    color: #D9D9D9;
+    top: 380px;
+}
+.contactme{
+    position: absolute;
+    width: 120px;
+    height: 32px;
+    font-family: 'Space Grotesk';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 26px;
+    letter-spacing: 2.28571px;
+    color: #FFFFFF;
+    top: 500px;
+    border-bottom: solid #4EE1A0 2px;
+}
+.oval{
+    position: absolute;
+    left: -15%;
+    top: 400px;
+}
+.middleDiv{
+    width: 100%;
+    height: 450px;
+    background-color: #151515;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding-top: 70px;
+
+}
+.middleinsideDivs{
+    width: 300px;
+    height: 180px;
+    background-color: #151515;
+}
+.insidemiddledivsP{
+    width: 124px;
+    height: 56px;
+    font-family: 'Space Grotesk';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 48px;
+    line-height: 56px;
+    letter-spacing: -1.5px;
+    color: #FFFFFF;
+    padding-bottom: 70px;
+}
+.secondinsidedivsP{
+
+    height: 28px;
+    font-family: 'Space Grotesk';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 28px;
+    color: #D9D9D9;
 }
