--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@
 
 }
 .headerDiv{
-    width: 445px;
+    width: 500px;
     height: 141px;
     background-color: #242424;
     display: flex;
@@ -69,7 +69,7 @@ h1{
     background-color: #242424;
 }
 .imgDiv{
-    width: 445px;
+    width: 500px;
     height: 600px;
     background-color: #242424;
     position: absolute;
@@ -83,44 +83,44 @@ h1{
 }
 .nicetomeetyou{
     position: absolute;
-    top: 100px;
+    top: 50px;
     width: 820px;
     height: 88px;   
     font-family: 'Space Grotesk';
     font-style: normal;
     font-weight: 700;
-    font-size: 88px;
+    font-size: 80px;
     line-height: 88px;
     color: white;
-    letter-spacing: 0.4px;
+    letter-spacing: 0px;
 }
 .vector{
     position: absolute;
-    top: 174px;
+    top: 126px;
 }
 .imspan{
     position: absolute;
-    top: 190px;
+    top: 140px;
     width: 820px;
     height: 88px;   
     font-family: 'Space Grotesk';
     font-style: normal;
     font-weight: 700;
-    font-size: 88px;
+    font-size: 80px;
     line-height: 88px;
     color: white;
     letter-spacing: 0.4px; 
 }
 .lashaspan{
     position: absolute;
-    top: 190px;
+    top: 140px;
     left: 150px;
-    width: 645px;
+    width: 600px;
     height: 100px;   
     font-family: 'Space Grotesk';
     font-style: normal;
     font-weight: 700;
-    font-size: 88px;
+    font-size: 80px;
     line-height: 88px;
     color: white;
     letter-spacing: 0.4px; 
@@ -140,7 +140,7 @@ h1{
     font-size: 18px;
     line-height: 28px;
     color: #D9D9D9;
-    top: 380px;
+    top: 330px;
 }
 .contactme{
     position: absolute;
@@ -301,4 +301,8 @@ h1{
 }
 #insidefirstdivID{
     border-top: 1px solid white;
+}
+
+#mathgame{
+    margin-left: -85px;
 }
