--- a/style.css
+++ b/style.css
@@ -738,9 +738,7 @@ h1 {
 
     }
 
-    #insidefirstdivID {
-        border: none;
-    }
+
 
     #headerdivID {
         border-top: none;
@@ -836,7 +834,7 @@ h1 {
     h1 {
         font-size: 24px;
         margin-left: 0;
-        
+
     }
 
     .ragacDiv {
@@ -854,7 +852,7 @@ h1 {
         left: 50%;
         transform: translate(-50%, 0);
         overflow: visible;
-       
+
     }
 
     .chemisurati {
@@ -862,8 +860,8 @@ h1 {
         width: 100%;
         height: 90%;
         margin-top: 25px;
- 
-        
+
+
     }
 
     .nicetomeetyou {
@@ -876,7 +874,7 @@ h1 {
         letter-spacing: -1.13636px;
         top: 270px;
         left: 10px;
-       
+
     }
 
     .vector {
@@ -891,7 +889,7 @@ h1 {
         letter-spacing: -1.13636px;
         top: 315px;
         left: 10px;
-        
+
     }
 
     .lashaspan {
@@ -904,7 +902,7 @@ h1 {
         left: 70px;
         width: 280px;
         height: 50px;
-        
+
     }
 
     .textP {
@@ -916,32 +914,38 @@ h1 {
         height: 78px;
         margin-top: 80px;
         left: 10px;
-        
+
     }
 
     .contactme {
         width: 120px;
-        height: 26px;
+        height: 35px;
         left: calc(50% - 117px/2 - 1.5px);
         margin-top: 80px;
-        
+
         font-family: 'Space Grotesk';
         font-style: normal;
         font-weight: 700;
         font-size: 16px;
-        line-height: 26px;  
+        line-height: 26px;
         letter-spacing: 2.28571px;
     }
 
     .contactme2 {
-        display: none;
+
+        width: 120px;
+        height: 35px;
+        font-size: 16px;
+        line-height: 26px;
+        letter-spacing: 2.28571px;
+        display: block;
     }
 
     .oval {
 
         left: 220px;
         top: 115px;
-       
+        display: none;
     }
 
     .middleDiv {
@@ -965,6 +969,7 @@ h1 {
         justify-content: space-around;
         align-content: space-around;
         text-align: center;
+
     }
 
     .insidemiddledivsP {
@@ -972,70 +977,49 @@ h1 {
         height: 40px;
         line-height: 40px;
         padding-bottom: 0;
+
     }
 
     .secondinsidedivsP {
 
         font-size: 16px;
+
     }
 
     .projectDiv {
-        display: none;
+        height: 100px;
     }
 
     .projectp {
 
-        display: none;
+        font-size: 40px;
+
     }
 
     .lastmainDiv {
-        display: none;
+
+        height: 2700px;
+        padding-top: 50px;
+        padding-left: 5px;
     }
 
-    .rectangledivs {
-        display: none;
-    }
-
-    .divforpic {
-        display: none;
-    }
-
-    .modernartgallery {
-        display: none;
-    }
-
-    #cssspan {
-        margin-left: 18px;
-    }
-
-    .suratebissataurebi {
-
-        display: none;
-    }
-
-    .suratebismeoresataurebi {
-        display: none;
-    }
-
-    #javascriptspan {
-        display: none;
-    }
+    
 
     #headerdivID {
-        display: none;
+        /* display: none; */
     }
 
     #headerdivID1 {
-        display: none;
+        /* display: none; */
 
     }
 
     #insidefirstdivID {
-        display: none;
+        margin-top: -1px;
+        border: none;
+        background-color: #151515;
     }
 
-    #artgalery6 {
-        display: none;
-    }
+
 
 }
